# coronagraphy_offset_ta

./: .gitignore  README.md  compute_offsets.py  example.py  offset_tools.py  pyproject.toml  setup.py
all_instruments/: All_Instrument_Notebook.ipynb  utils.py
all_jwst_offset_ta/: All_Instrument_Notebook-wfss_traces.ipynb  All_Instrument_Notebook.ipynb  misc_plots.py  utils.py
miri_coro_offset_ta/: compute_offsets.py
src/all_jwst_offset_ta/: All_Instrument_Notebook-wfss_traces.ipynb  All_Instrument_Notebook.ipynb  utils.py  wfss_plots.py
src/all_jwst_offset_ta/.ipynb_checkpoints/: All_Instrument_Notebook-checkpoint.ipynb  wfss_plots-checkpoint.py
src/miri_coro_offset_ta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
